--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <meta property="og:description" content="tent space(テントスペース)は、AI駆動開発と実績のある専門知識を組み合わせて、より迅速でスマートなソリューションを提供するテックスタジオです。" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tentspace.net" />
-    <meta property="og:image" content="https://tentspace.net/favicon-32x32.png" />
+    <meta property="og:image" content="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/ogp-3BWbJdNPb1TreoCQYugpmwHZs5CsrW.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="tent␣" />
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="tent␣ - AI駆動開発" />
-    <meta name="twitter:description" content="tent space(テントスペース)は、AI駆動開発と実績のある専門知識を組み合わせて、より迅速でスマートなソリューションを提供するテックスタジオです。" />
-    <meta name="twitter:image" content="https://tentspace.net/favicon-32x32.png" />
+    <meta name="twitter:description" content="tent␣は、AIパワード開発と実績のある専門知識を組み合わせて、より迅速でスマートなソリューションを提供するテックスタジオです。" />
+    <meta name="twitter:image" content="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/ogp-3BWbJdNPb1TreoCQYugpmwHZs5CsrW.png" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://tentspace.net" />
